Demos: Speech Synthesis, Recognition, Web Audio

--- a/webspeech.html
+++ b/webspeech.html
@@ -48,12 +48,12 @@
 				</select>
 			</label>
 
-			<button id="btnSpeak" data-pause="Pause" data-resume="Weiterlesen">Vorlesen starten</button>
+			<button role="switch" aria-checked="false" id="btnSpeak" data-pause="Pause" data-resume="Weiterlesen">Vorlesen starten</button>
 
 			<button id="btnReset">Zurücksetzen</button>
 
 		</form>
 
-		<script async src="demo.js"></script>
+		<script async src="webspeech.js"></script>
 	</body>
 </html>
