--- a/speechrecognition-dictate.html
+++ b/speechrecognition-dictate.html
@@ -9,7 +9,9 @@
 	</head>
 	<body>
 		<h1>Web Speech Recognition</h1>
-		<p>Klicken Sie auf den Button und sprechen Sie einen der unten stehenden Farbnamen:</p>
+		<h2>Funktioniert derzeit nur mit Google Chrome</h2>
+		<p>Klicken Sie auf den Button und sprechen Sie Text ein:</p>
 		<script async src="speechrecognition-dictate.js"></script>
+		<nav><a href="./">Zur Startseite</a></nav>
 	</body>
 </html>
