--- a/speechrecognition-pick.html
+++ b/speechrecognition-pick.html
@@ -9,7 +9,9 @@
 	</head>
 	<body>
 		<h1>Web Speech Recognition</h1>
+		<h2>Funktioniert derzeit nur mit Google Chrome</h2>
 		<p>Klicken Sie auf den Button und sprechen Sie einen der unten stehenden Farbnamen:</p>
-		<script async src="speechrecognition.js"></script>
+		<nav><a href="./">Zur Startseite</a></nav>
+		<script async src="speechrecognition-pick.js"></script>
 	</body>
 </html>
