Move js files to folder

--- a/speechrecognition-pick.html
+++ b/speechrecognition-pick.html
@@ -12,6 +12,6 @@
 		<h2>Funktioniert derzeit nur mit Google Chrome</h2>
 		<p>Klicken Sie auf den Button und sprechen Sie einen der unten stehenden Farbnamen:</p>
 		<nav><a href="./">Zur Startseite</a></nav>
-		<script async src="speechrecognition-pick.js"></script>
+		<script async src="js/speechrecognition-pick.js"></script>
 	</body>
 </html>
