--- a/speechsynthesis-demo.html
+++ b/speechsynthesis-demo.html
@@ -17,6 +17,6 @@
 		</form>
 
 		<nav><a href="./">Zur Startseite</a></nav>
-		<script async src="speechsynthesis-demo.js"></script>
+		<script async src="js/speechsynthesis-demo.js"></script>
 	</body>
 </html>
