--- a/webaudio-demo.html
+++ b/webaudio-demo.html
@@ -22,6 +22,6 @@
 			</label>
 		</form>
 		<nav><a href="./">Zur Startseite</a></nav>
-		<script async src="webaudio-demo.js"></script>
+		<script async src="js/webaudio-demo.js"></script>
 	</body>
 </html>
