--- a/webaudio-mp3.html
+++ b/webaudio-mp3.html
@@ -25,6 +25,6 @@
 		</form>
 
 		<nav><a href="./">Zur Startseite</a></nav>
-		<script async src="webaudio-mp3.js"></script>
+		<script async src="js/webaudio-mp3.js"></script>
 	</body>
 </html>
