--- a/webaudio-synthesizer.html
+++ b/webaudio-synthesizer.html
@@ -52,6 +52,6 @@
 		</form>
 
 		<nav><a href="./">Zur Startseite</a></nav>
-		<script async src="webaudio-synthesizer.js"></script>
+		<script async src="js/webaudio-synthesizer.js"></script>
 	</body>
 </html>
